# srmember-django

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/core/: admin.py  feishu.py  forms.py  markdown.py  models.py  oauth.py  tests.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_oauthlookupcode.py  0003_bioprofile.py  0004_shortcutlink.py  0005_memberprofile.py  0006_feishudocument_feishudocumentsetting.py  0007_shortcutlink_is_pinned.py  0008_sitesetting_home_dashboard_description_and_more.py  0009_sitesetting_sr_user_id_label.py  0010_sitesetting_website_visit_count.py  0011_sitesetting_lucide_cdn_url.py  0012_sitesetting_sweetalert2_cdn_url.py
apps/core/templates/core/: bio.html  bio_edit.html  bio_help.html  documents.html  home.html  members.html  quick_links.html
srmember/: asgi.py  settings.py  urls.py  wsgi.py
static/admin/css/: bio_admin.css  srmember_admin.css
static/core/css/: markdown.css  martor.css  tailwind.css
static/core/js/: markdown_tools.js  mathjax_config.js
templates/: base.html
templates/admin/: base_site.html
templates/admin/core/bioprofile/: change_form.html
templates/unfold/helpers/: avatar.html
