[project]
name = "srmember-django"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.2",
    "bleach>=6.4.0",
    "django>=6.0.6",
    "django-unfold>=0.98.0",
    "markdown>=3.10.2",
    "martor>=1.8.1",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.3",
    "requests>=2.34.2",
    "tinycss2>=1.5.1",
]
